--- a/HW5.ipynb
+++ b/HW5.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a563f96",
+   "id": "aa84cb1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "079e65e9",
+   "execution_count": null,
+   "id": "32d5267c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'function' and 'function'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[26], line 37\u001b[0m\n\u001b[1;32m     35\u001b[0m eps \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1.e-8\u001b[39m\n\u001b[1;32m     36\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39marange (\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m100\u001b[39m, \u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m---> 37\u001b[0m     x1\u001b[38;5;241m=\u001b[39mx1\u001b[38;5;241m+\u001b[39mdx1(f1,f2,a,b,c,d,x1,x2)\n\u001b[1;32m     38\u001b[0m     x2\u001b[38;5;241m=\u001b[39mx2\u001b[38;5;241m+\u001b[39mdx2(f1,f2,a,b,c,d,x1,x2)\n\u001b[1;32m     39\u001b[0m     \u001b[38;5;28mprint\u001b[39m(f1(x1,x2), f2(x1,x2))\n",
-      "Cell \u001b[0;32mIn[26], line 28\u001b[0m, in \u001b[0;36mdx1\u001b[0;34m(f1, f2, a, b, c, d, x1, x2)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdx1\u001b[39m(f1,f2,a,b,c,d,x1,x2):\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (b\u001b[38;5;241m*\u001b[39mf2 \u001b[38;5;241m-\u001b[39m d\u001b[38;5;241m*\u001b[39mf1)\u001b[38;5;241m/\u001b[39m(a\u001b[38;5;241m*\u001b[39md \u001b[38;5;241m-\u001b[39m b\u001b[38;5;241m*\u001b[39mc)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'function' and 'function'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -59,13 +46,13 @@
     "    f2(x2+dx/2., x1) - f2(x2-dx/2.,x1)\n",
     "    \n",
     "def dx1(f1,f2,a,b,c,d,x1,x2):\n",
-    "    return (b*f2 - d*f1)/(a*d - b*c)\n",
+    "    return (b(x1,x2)*f2(x1,x2) - d(x1,x2)*f1(x1,x2))/(a(x1,x2)*d(x1,x2) - b(x1,x2)*c(x1,x2))\n",
     "\n",
     "def dx2(f1,f2,a,b,c,d,x1,x2):\n",
-    "    return (c*f1 - a*f2)/(a*d - b*c)\n",
+    "    return (c(x1,x2)*f1(x1,x2) - a(x1,x2)*f2(x1,x2))/(a(x1,x2)*d(x1,x2) - b(x1,x2)*c(x1,x2))\n",
     "    \n",
-    "x1=5\n",
-    "x2=10\n",
+    "x1=3\n",
+    "x2=6\n",
     "eps = 1.e-8\n",
     "for i in np.arange (0, 100, 1):\n",
     "    x1=x1+dx1(f1,f2,a,b,c,d,x1,x2)\n",
@@ -79,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2e55321",
+   "id": "2eff92bd",
    "metadata": {},
    "outputs": [],
    "source": []
